# VAIC2026-TuTru

./: .gitignore  .opencode.json  README.md  render.yaml
.gemini/: settings.json  settings.json.bak
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.qoder/: mcp.json  settings.json
ai/: .env.example  .gitignore  README.md  __init__.py  main.py  requirements.txt
ai/app/: __init__.py  main.py
ai/peak_hour_prediction/: .env  README.md  __init__.py  requirements.txt  train.py
ai/process_input_data/: .env.example  README.md  __init__.py  generate_dataset.py  train.py
backend/: .env.example  .gitignore  README.md  eslint.config.js  package-lock.json  package.json
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
wait_time_module/: .gitignore  README.md  pyproject.toml
wait_time_module/app/: __init__.py  main.py
wait_time_module/app/domain/: models.py
wait_time_module/app/ml/: predictor.py
wait_time_module/app/queue_engine/: engine.py
wait_time_module/app/schemas/: api.py
wait_time_module/app/services/: events.py
wait_time_module/app/storage/: memory.py  migrations.py
wait_time_module/data/sample/: synthetic.quality.json
wait_time_module/docs/: API_CONTRACT.md  DATA_DICTIONARY.md  EARLY_ARRIVAL_AND_CROSS_ROOM_FLOW.md  LIMITATIONS.md  QUEUE_RULES.md  openapi.json
wait_time_module/postman/: wait-time-module.postman_collection.json
wait_time_module/scripts/: benchmark_monte_carlo.py  export_openapi.py  import_real_data.py  init_db.py  migrate_local_db.py  smoke_test_api.py
(+226 files in other folders)
