[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wait-time-module"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2.6", "numpy>=1.26", "pandas>=2.2", "scikit-learn>=1.4", "joblib>=1.3", "sqlalchemy>=2.0"]

[project.optional-dependencies]
test = ["pytest>=8", "httpx>=0.27"]
postgres = ["psycopg[binary]>=3.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
